Reverted little css changes + fix bug: popup`s z-Index

--- a/src/components/popup/popup.less
+++ b/src/components/popup/popup.less
@@ -1,5 +1,6 @@
 .popup {
 	position: absolute;
+	z-index: 99;
 	top: 0;
 	left: 0;
 	background-color: rgba(0, 0, 0, 0.7);
